--- a/minimalist.html
+++ b/minimalist.html
@@ -8,6 +8,8 @@
 
     <!-- Link to the default light theme -->
     <link rel="stylesheet" href="minimalist.css" id="theme">
+    <link rel="stylesheet" href="media.css">
+
 
     <link rel="icon" href="images/icon.svg" type="webp">
 
@@ -30,47 +32,6 @@
                     <div class="left-side">
                         <div class="theme-button">
                             <button class="timer-theme" > Clock </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="right-side">
-                    <div id="timer-content" class="theme-content">
-                        <div class="theme-set">
-                            <button class="theme-pic one" id="theme1" data-theme="theme-background-aesthetic">
-                                <img class="pic one" src="images/gradient4-complete.png" alt="Aesthetic Heart">
-                                <p>Aesthetic Heart</p>
-                            </button>
-
-                            <div class="theme-pic two" id="theme2" data-theme="theme-background-ambient">
-                                <img class="pic one" src="images/gradient5.jpeg" alt="Ambient Heart">
-                                <p>Ambient Heart</p>
-                            </div>
-                            <div class="theme-pic three" id="theme3" data-theme="theme-background-squared">
-                                <img class="pic one" src="images/squared.png" alt="Ambient Clock">
-                                <p>Ambient Clock</p>
-                            </div>
-
-                            <div class="theme-pic four" id="theme4" data-theme="theme-background-lofi1">
-                                <img class="pic one" src="images/video1.webp">
-                                <p> Lofi </p>
-                            </div> 
-
-                            <div class="theme-pic five" id="theme5" data-theme="theme-background-lofi2">
-                                <img class="pic one" src="images/video3.gif">
-                                <p> Lofi </p>
-                            </div> 
-
-                            <div class="theme-pic six" id="theme6" data-theme="theme-background-lofi3">
-                                <img class="pic one" src="images/video2.webp">
-                                <p> Lofi </p>
-                            </div> 
-
-                            <div class="theme-pic seven" id="theme7" data-theme="theme-background-lofi4">
-                                <img class="pic one" src="https://i.pinimg.com/originals/fb/af/44/fbaf443c014bf40b95cfa35121572b25.gif">
-                                <p> Lofi </p>
-                            </div> 
-
                         </div>
                     </div>
                 </div>
